This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

24-Nov-2005  (Gnomi)
  - (lex.c) <code>(: catch(load_object($1);nolog) :)</code> no
       longer produces a syntax error (Bug #403).

24-Nov-2005  (Lars Duening)
  - (md5.c) The ROTATE_LEFT macro wasn't 64-bit clean (Bug #413).
  - (interpret.c) Using foreach(), when looping over a mapping with no values,
      or with only the index being extracted, the loop actually loops over the
      mapping and not just the indices copied into an array (Bug #388).
  - (simulate.c) Efun set_environment(): clear the RESET_STATE flag of
      of the moved object's original environment, if any (Bug #387).
  - (efuns.c) Efun md5() can now hash arrays of numbers as well (Bug #411).
  - (xalloc.c, smalloc.c) The string_copy() function checks if the requested
      memory is actually allocated, throwing an error if not (Bug #397).
  - (simulate.c) Errors during the processing of a fatal() will be
      recognized and treated as double-fatal (Bug #408).
  - (interpret.c) free_svalue() now recognizes the free of nested
      structures and de-serializes them to avoid stack overflows (Bug #416).
  - (Makefile.in, version.sh, patchlevel.h.in) Removed PRCS support.

19-Oct-2005 (Lars Duening)
  - (pkg-tls.c) tls_check_certificate() now returns the low-level API
      values, and throws an error if the connection is not secure.

11-Oct-2005 (Lars Duening)
  - (erq/erq.c, erq/Makefile, xerq/socket.c) Corrected compilation warnings.
  - (lex.c) to_int() no longer accepts "x<num>" as valid sedecimal
       notation (Bug #0000402).

04-Oct-2005 (Lars Duening)
  - (doc/concepts/overloading) New man page (thanks, Coogan!).

02-Oct-2005 (Lars Duening)  (3.2.12-rev.24)
  - (main.c, lex.c, version.sh) Updated to display the correct revision
      number.
  - (interpret.c) put_c_string() incremented the target location pointer