@@ -4,10 +4,12 @@ the host system.
 
 For a detailed list of all changes see the file CHANGELOG.
 
-24-Nov-2005 (Lars Duening) -- upcoming Release 3.2.12
+26-Nov-2005 (Lars Duening) -- upcoming Release 3.2.12
 
     - Changed efuns:
       + md5(): Accept number arrays as arguments as well.
+      + sscanf():  Added test whether the constant characters after
+          a %-field also match - if not, the %-field is considered unmatched.
       + tls_check_certificate(): Return the low-level API results, and throw
           an error if the connection is not secure.
 
